src/main/scala/ScalaForTheJavaEyes/output/RunMultipleAssignment2.output
(fragment of MultipleAssignment2.scala):5: error: 
  constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: (java.lang.String, java.lang.String, java.lang.String)
val (firstName, lastName) = getPersonInfo(1)
     ^
...
